@@ -1,3 +1,9 @@
+2002-02-13  John Harper  <jsh@unfactored.org>
+
+	* widgets/frame-style.jl (make-frame-style-item): go to great
+	lengths to avoid picking up fucked changes from the combo's
+	entry widget
+
 2002-02-12  John Harper  <jsh@unfactored.org>
 
 	* slot.jl, shell.jl, main.jl.in, layout.jl, group.jl: 
